[project]
name = "biblib"
version = "0.0.1"
description = "ADS Library Service"
authors = [{ name = "ADS Team", email = "adshelp@cfa.harvard.edu" }]
license = { text = "MIT" }
readme = "README.md"
packages = ["biblib"]
dependencies = [
    "adsmutils @ git+https://github.com/femalves/ADSMicroserviceUtils.git@1f2c55b",
    "alembic==1.12.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy-continuum==1.3.15",
    "Flask-Mail==0.9.1",
    "Flask-Email==1.4.4",
    "Jinja2==3.1.2",
    "markupsafe==2.1.3",
    "itsdangerous==2.1.2",
    "werkzeug==2.3.8"
]

[project.optional-dependencies]
dev = [
    "Flask-Testing==0.8.1",
    "httpretty==1.1.4",
    "testing.postgresql==1.3.0",
    "pytest==7.4.4",
    "pytest-cov==5.0.0",
    "Faker==22.0.0",
    "factory-boy==3.3.0",
    "freezegun==1.4.0",
    "httmock==1.4.0",
    "mock==4.0.3",
    "flake8==7.0.0",
    "black==24.3.0",
    "isort==5.12.0",
    "coverage==7.6.1",
    "coveralls==4.0.1"
]

[build-system]
requires = [
    "setuptools>=62.0.0,<70.0.0",
    "wheel",
    "flit_core >=3.2,<4",
    "ppsetuptools==2.0.2"
]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--cov=biblib --cov-report=term-missing"
testpaths = ["biblib/tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
