[project]
name = "biblib"
version = "0.0.1"
description = "ADS Library Service"
authors = [{ name = "ADS Team", email = "adshelp@cfa.harvard.edu" }]
license = { text = "MIT" }
readme = "README.md"
packages = ["biblib"]
dependencies = [
    "adsmutils @ git+https://github.com/femalves/ADSMicroserviceUtils.git@4e6c98e",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.11",
    "sqlalchemy-continuum==1.3.15",
    "Flask-Mail==0.10.0",
    "Flask-Email==1.4.4",
    "Jinja2==3.1.6",
    "markupsafe==3.0.3",
    "itsdangerous==2.2.0",
    "werkzeug==2.3.8"
]

[project.optional-dependencies]
dev = [
    "Flask-Testing==0.8.1",
    "httpretty==1.1.4",
    "testing.postgresql==1.3.0",
    "pytest==7.4.4",
    "pytest-cov==5.0.0",
    "Faker==22.0.0",
    "factory-boy==3.3.3",
    "freezegun==1.5.5",
    "httmock==1.4.0",
    "mock==5.2.0",
    "flake8==7.1.0",
    "black==24.10.0",
    "isort==5.12.0",
    "coverage==7.6.1",
    "coveralls==4.0.1"
]

[build-system]
requires = [
    "setuptools>=62.0.0,<70.0.0",
    "wheel",
    "flit_core >=3.2,<4",
    "ppsetuptools==2.0.2"
]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--cov=biblib --cov-report=term-missing"
testpaths = ["biblib/tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
